@@ -1,6 +1,6 @@
 test_scripts = TestStubs.t Test.t Module_writeConfFile.t Auth.t  \
                Backup.t Module.t ProgressIndicator.t exposeEventsAPI.t \
-	       Apache.t GConfModule_Files.t
+	       Apache.t GConfModule_Files.t Global.t
 
 EXTRA_DIST = $(test_scripts)
 
