@@ -3,7 +3,11 @@
 	  which is /var/lib/ebox/dynamicwww/css/ and not in /usr/share/ebox/www/css
 	  as these files are generate every time eBox's apache is
 	  restarted
-	+ Bug fix: modules are restored now in the correct dependency order
+	+ Bug fix: modules are restored now in the correct dependency
+	  order
+	+ Bug fix: fixed order in EBox::Global::modified modules. Now
+	  Global and Backup use the same method to order the module list
+	  by dependencies
 	+ ebox-make-backup accepts --destinaton flag to set backup's file name
 	+ Add support for permanent messages to EBox::View::Customizer
 1.3.6
